Reduced amount of created Item objects where not required, transformed to ItemData since it's smaller
Moved variables in processItem() a bit so they don't get created if not required

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,8 +1,9 @@
 name: RecipeManager
 description: Add, edit or remove recipes and fuels
-version: 1.23d
+version: 1.23e
 author: Digi
 website: http://dev.bukkit.org/server-mods/recipemanager/
+dev-url: http://dev.bukkit.org/server-mods/recipemanager/
 main: digi.recipeManager.RecipeManager
 softdepend: [Vault, iConomy]
 commands:
